apps/jjinbbang-api/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jjinbbang-prod
  labels:
    app.kubernetes.io/part-of: jjinbbang
    app.kubernetes.io/environment: prod
